samples/_failures_safe/1761343583_19e06e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8858ba2c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_8858ba2c.c:150:5: error: expected identifier at end of input
  150 |     heap->
      |     ^~~~
./samples/SAFE/__tmp_8858ba2c.c:150:5: error: expected declaration or statement at end of input
